--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,8 @@ typings/
 # dotenv environment variables file
 .env
 
-# bundle
-shortcuthub.js*
-
 # mac os
 .DS_Store
+
+# Build output from Chrome extension
+build/
