--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -4,7 +4,10 @@
     "name": "Getting started example",
     "description": "This extension allows the user to change the background color of the current page.",
     "version": "1.0",
-
+    "background": {
+      "page": "background.html"
+    },
+    "options_page": "options.html",
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html",
