--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -9,12 +9,13 @@
     },
     "options_page": "options.html",
     "browser_action": {
-        "default_icon": "icon.png",
+        "default_icon": "img/icon.png",
         "default_popup": "popup.html",
         "default_title": "Click here!"
     },
     "permissions": [
         "activeTab",
         "storage"
-    ]
+    ],
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
