--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.1",
+    "typescript": "^2.6.2",
     "webpack": "^3.10.0",
-    "write-file-webpack-plugin": "^4.2.0"
-  }
+    "write-file-webpack-plugin": "^4.2.0",
+    "ts-loader": "^3.2.0"
+  },
+  "dependencies": {}
 }
