--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -5,7 +5,7 @@
     "description": "This extension allows the user to change the background color of the current page.",
     "version": "1.0",
     "background": {
-      "scripts": ["js/background.js"],
+      "scripts": ["background.js"],
       "persistent": false
     },
     "options_page": "options.html",
