Added google plugin

--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "webpack": "^3.10.0",
     "write-file-webpack-plugin": "^4.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "keymaster": "^1.6.2"
+  }
 }
