Added messenger and dynamically generated plugins

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -17,6 +17,7 @@
     "permissions": [
         "tabs",
         "activeTab",
+        "webNavigation",
         "storage",
         "http://*/",
         "https://*/"
