change toggle to Alt+A, use plugin name

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -27,8 +27,7 @@
     "commands": {
         "toggle-popup": {
             "suggested_key": {
-                "default": "Ctrl+Shift+Y",
-                "mac": "Command+Shift+Y"
+                "default": "Alt+A"
             },
             "description": "Toggle Popup"
         }
