Updated ssri package

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "keymaster": "^1.6.2",
     "radium": "^0.22.1",
+    "ssri": "^5.3.0",
     "typings-for-css-modules-loader": "^1.7.0"
   }
 }
