--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Macro",
-    "description": "Macro provides a platform for web users to access, create, and distribute keyboard shortcuts for their favorite websites.",
+    "description": "Provides powerful website-specific shortcuts and instant keyboard shortcut discovery across many websites.",
     "version": "1.3.0",
     "icons": {
         "128": "img/icon.png"
