Updated version, minor fixes

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "ssri": "^5.3.0",
     "typings-for-css-modules-loader": "^1.7.0",
     "webfontloader": "^1.6.28"
+  },
+  "scripts": {
+    "build": "webpack --optimize-minimize"
   }
 }
